--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vite"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^5.2.1",
     "axios": "^1.7.9",
     "core-js": "^3.8.3",
+    "daisyui": "^4.12.23",
+    "vite-plugin-vue-devtools": "^7.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
@@ -20,10 +24,13 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.83.4",
-    "sass-loader": "^16.0.4"
+    "sass-loader": "^16.0.4",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.1.0"
   },
   "eslintConfig": {
     "root": true,
